Update of unit tests to use KRaft - part 9
Signed-off-by: Jakub Scholz <www@scholzj.com>