@@ -36,17 +36,13 @@ import io.fabric8.kubernetes.api.model.networking.v1.NetworkPolicyIngressRule;
 import io.fabric8.kubernetes.api.model.networking.v1.NetworkPolicyPeer;
 import io.fabric8.kubernetes.api.model.networking.v1.NetworkPolicyPeerBuilder;
 import io.strimzi.api.kafka.model.common.ContainerEnvVar;
-import io.strimzi.api.kafka.model.common.InlineLogging;
 import io.strimzi.api.kafka.model.common.JvmOptions;
 import io.strimzi.api.kafka.model.common.SystemPropertyBuilder;
 import io.strimzi.api.kafka.model.common.metrics.JmxPrometheusExporterMetricsBuilder;
-import io.strimzi.api.kafka.model.common.metrics.MetricsConfig;
 import io.strimzi.api.kafka.model.common.template.AdditionalVolume;
 import io.strimzi.api.kafka.model.common.template.AdditionalVolumeBuilder;
 import io.strimzi.api.kafka.model.common.template.IpFamily;
 import io.strimzi.api.kafka.model.common.template.IpFamilyPolicy;
-import io.strimzi.api.kafka.model.kafka.EphemeralStorage;
-import io.strimzi.api.kafka.model.kafka.JbodStorage;
 import io.strimzi.api.kafka.model.kafka.JbodStorageBuilder;
 import io.strimzi.api.kafka.model.kafka.Kafka;
 import io.strimzi.api.kafka.model.kafka.KafkaBuilder;
@@ -55,14 +51,15 @@ import io.strimzi.api.kafka.model.kafka.PersistentClaimStorageBuilder;
 import io.strimzi.api.kafka.model.kafka.Storage;
 import io.strimzi.api.kafka.model.kafka.cruisecontrol.BrokerCapacityBuilder;
 import io.strimzi.api.kafka.model.kafka.cruisecontrol.CruiseControlResources;
-import io.strimzi.api.kafka.model.kafka.cruisecontrol.CruiseControlSpec;
-import io.strimzi.api.kafka.model.kafka.cruisecontrol.CruiseControlSpecBuilder;
+import io.strimzi.api.kafka.model.kafka.listener.GenericKafkaListenerBuilder;
+import io.strimzi.api.kafka.model.kafka.listener.KafkaListenerType;
 import io.strimzi.operator.cluster.KafkaVersionTestUtils;
 import io.strimzi.operator.cluster.PlatformFeaturesAvailability;
 import io.strimzi.operator.cluster.ResourceUtils;
 import io.strimzi.operator.cluster.model.cruisecontrol.BrokerCapacity;
 import io.strimzi.operator.cluster.model.cruisecontrol.Capacity;
 import io.strimzi.operator.cluster.model.cruisecontrol.CpuCapacity;
+import io.strimzi.operator.common.Annotations;
 import io.strimzi.operator.common.Reconciliation;
 import io.strimzi.operator.common.model.Labels;
 import io.strimzi.operator.common.model.cruisecontrol.CruiseControlApiProperties;
@@ -92,7 +89,6 @@ import static io.strimzi.operator.common.model.cruisecontrol.CruiseControlConfig
 import static io.strimzi.operator.common.model.cruisecontrol.CruiseControlConfigurationParameters.DEFAULT_GOALS_CONFIG_KEY;
 import static java.lang.String.format;
 import static java.util.Collections.singletonList;
-import static java.util.Collections.singletonMap;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.hasItem;
@@ -112,133 +108,49 @@ import static org.hamcrest.Matchers.hasProperty;
 })
 @ParallelSuite
 public class CruiseControlTest {
-    private final static Set<NodeRef> NODES = Set.of(
-            new NodeRef("foo-kafka-0", 0, "kafka", false, true),
-            new NodeRef("foo-kafka-1", 1, "kafka", false, true),
-            new NodeRef("foo-kafka-2", 2, "kafka", false, true));
-
-    private static final SharedEnvironmentProvider SHARED_ENV_PROVIDER = new MockSharedEnvironmentProvider();
-
-    private static final String NAMESPACE = "test";
-    private static final String CLUSTER = "foo";
-    private static final int REPLICAS = 1;
-    private static final String IMAGE = "my-image:latest";
-    private static final int HEALTH_DELAY = 120;
-    private static final int HEALTH_TIMEOUT = 30;
+    private static final String NAMESPACE = "my-namespace";
+    private static final String CLUSTER_NAME = "my-cluster";
     private static final String REPLICATION_FACTOR = "3";
     private static final String MIN_INSYNC_REPLICAS = "2";
-    private static final String BROKER_CAPACITY_CPU = "6.0";
-    private static final String BROKER_CAPACITY_OVERRIDE_CPU = "2.0";
-    private static final String RESOURCE_LIMIT_CPU = "3.0";
-    private static final String RESOURCE_REQUESTS_CPU = "4.0";
-
-    private final Map<String, Object> kafkaConfig = new HashMap<>() {{
-            put(CruiseControl.MIN_INSYNC_REPLICAS, MIN_INSYNC_REPLICAS);
-            put(KafkaConfiguration.DEFAULT_REPLICATION_FACTOR, REPLICATION_FACTOR);
-        }};
-
-    private final Storage kafkaStorage = new EphemeralStorage();
-    private final InlineLogging kafkaLogJson = new InlineLogging();
-    private final InlineLogging zooLogJson = new InlineLogging();
+    private static final SharedEnvironmentProvider SHARED_ENV_PROVIDER = new MockSharedEnvironmentProvider();
     private static final KafkaVersion.Lookup VERSIONS = KafkaVersionTestUtils.getKafkaVersionLookup();
-    private final String ccImage = "my-cruise-control-image";
 
-    {
-        kafkaLogJson.setLoggers(singletonMap("kafka.root.logger.level", "OFF"));
-        zooLogJson.setLoggers(singletonMap("zookeeper.root.logger", "OFF"));
-    }
-
-    private final CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-            .withImage(ccImage)
-            .withNewTemplate()
-                .withNewPod()
-                    .withTmpDirSizeLimit("100Mi")
-                .endPod()
-            .endTemplate()
+    private static final Kafka KAFKA = new KafkaBuilder()
+            .withNewMetadata()
+                .withNamespace(NAMESPACE)
+                .withName(CLUSTER_NAME)
+                .withLabels(Map.of("my-user-label", "cromulent"))
+                .withAnnotations(Map.of(Annotations.ANNO_STRIMZI_IO_NODE_POOLS, "enabled", Annotations.ANNO_STRIMZI_IO_KRAFT, "enabled"))
+            .endMetadata()
+            .withNewSpec()
+                .withNewKafka()
+                    .withListeners(new GenericKafkaListenerBuilder()
+                            .withName("tls")
+                            .withPort(9092)
+                            .withType(KafkaListenerType.INTERNAL)
+                            .withTls(true)
+                            .build())
+                    .withConfig(Map.of(CruiseControl.MIN_INSYNC_REPLICAS, MIN_INSYNC_REPLICAS, KafkaConfiguration.DEFAULT_REPLICATION_FACTOR, REPLICATION_FACTOR))
+                .endKafka()
+                .withNewCruiseControl()
+                .endCruiseControl()
+            .endSpec()
             .build();
+    private static final Set<NodeRef> NODES = Set.of(
+            new NodeRef("my-cluster-brokers-0", 0, "brokers", false, true),
+            new NodeRef("my-cluster-brokers-1", 1, "brokers", false, true),
+            new NodeRef("my-cluster-brokers-2", 2, "brokers", false, true)
+    );
+    private static final Map<String, Storage> STORAGE = Map.of("brokers", new JbodStorageBuilder().withVolumes(new PersistentClaimStorageBuilder().withId(0).withSize("100Gi").build()).build());
 
-    private final Kafka kafka = createKafka(cruiseControlSpec);
-    private final CruiseControl cc = createCruiseControl(kafka);
 
-    private Map<String, Storage> createStorageMap(Kafka kafkaAssembly) {
-        Map<String, Storage> storage = new HashMap<>();
-        storage.put("kafka", kafkaAssembly.getSpec().getKafka().getStorage());
-
-        return storage;
-    }
-
-    private Map<String, ResourceRequirements> createResourceRequirementsMap(Kafka kafkaAssembly) {
-        Map<String, ResourceRequirements> resources = new HashMap<>();
-        resources.put("kafka", kafkaAssembly.getSpec().getKafka().getResources());
-
-        return resources;
-    }
-
-    private CruiseControl createCruiseControl(Kafka kafkaAssembly) {
-        return CruiseControl
-                .fromCrd(
-                        Reconciliation.DUMMY_RECONCILIATION,
-                        kafkaAssembly,
-                        VERSIONS,
-                        NODES,
-                        createStorageMap(kafkaAssembly),
-                        createResourceRequirementsMap(kafkaAssembly),
-                        SHARED_ENV_PROVIDER
-                );
-    }
-
-    private Kafka createKafka(CruiseControlSpec cruiseControlSpec) {
-        return new KafkaBuilder(ResourceUtils.createKafka(NAMESPACE, CLUSTER, REPLICAS, IMAGE, HEALTH_DELAY, HEALTH_TIMEOUT))
-                .editSpec()
-                    .editKafka()
-                        .withConfig(kafkaConfig)
-                        .withStorage(kafkaStorage)
-                    .endKafka()
-                    .withCruiseControl(cruiseControlSpec)
-                .endSpec()
-                .build();
-    }
-
-    private Map<String, String> expectedLabels(String name) {
-        return TestUtils.map(Labels.STRIMZI_CLUSTER_LABEL, CLUSTER,
-                "my-user-label", "cromulent",
-                Labels.STRIMZI_KIND_LABEL, Kafka.RESOURCE_KIND,
-                Labels.STRIMZI_NAME_LABEL, name,
-                Labels.STRIMZI_COMPONENT_TYPE_LABEL, CruiseControl.COMPONENT_TYPE,
-                Labels.KUBERNETES_NAME_LABEL, CruiseControl.COMPONENT_TYPE,
-                Labels.KUBERNETES_INSTANCE_LABEL, CLUSTER,
-                Labels.KUBERNETES_PART_OF_LABEL, Labels.APPLICATION_NAME + "-" + CLUSTER,
-                Labels.KUBERNETES_MANAGED_BY_LABEL, AbstractModel.STRIMZI_CLUSTER_OPERATOR_NAME);
-    }
-
-    private Map<String, String> expectedSelectorLabels() {
-        return Labels.fromMap(expectedLabels()).strimziSelectorLabels().toMap();
-    }
-
-    private Map<String, String> expectedLabels() {
-        return expectedLabels(CruiseControlResources.componentName(CLUSTER));
-    }
-
-    private List<EnvVar> getExpectedEnvVars() {
-        List<EnvVar> expected = new ArrayList<>();
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_CRUISE_CONTROL_METRICS_ENABLED).withValue(Boolean.toString(CruiseControl.DEFAULT_CRUISE_CONTROL_METRICS_ENABLED)).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_STRIMZI_KAFKA_BOOTSTRAP_SERVERS).withValue(KafkaResources.bootstrapServiceName(CLUSTER) + ":" + KafkaCluster.REPLICATION_PORT).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_STRIMZI_KAFKA_GC_LOG_ENABLED).withValue(Boolean.toString(JvmOptions.DEFAULT_GC_LOGGING_ENABLED)).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_SSL_ENABLED).withValue(Boolean.toString(CruiseControlConfigurationParameters.DEFAULT_WEBSERVER_SSL_ENABLED)).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_AUTH_ENABLED).withValue(Boolean.toString(CruiseControlConfigurationParameters.DEFAULT_WEBSERVER_SECURITY_ENABLED)).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_HEALTHCHECK_USERNAME).withValue(CruiseControlApiProperties.HEALTHCHECK_USERNAME).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_PORT).withValue(Integer.toString(CruiseControl.REST_API_PORT)).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_HEALTHCHECK_PATH).withValue(API_HEALTHCHECK_PATH).build());
-        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_KAFKA_HEAP_OPTS).withValue("-Xms" + JvmOptionUtils.DEFAULT_JVM_XMS).build());
-        return expected;
-    }
-
-    private static boolean isJBOD(Object diskCapacity) {
-        return diskCapacity instanceof JsonObject;
+    @AfterAll
+    public static void cleanUp() {
+        ResourceUtils.cleanUpTemporaryTLSFiles();
     }
 
     @ParallelTest
-    public void testBrokerCapacities() {
+    public void testBrokerCapacity() {
         // Test user defined capacities
         String userDefinedCpuCapacity = "2575m";
         JsonObject expectedCpuCapacity = new CpuCapacity(userDefinedCpuCapacity).getJson();
@@ -248,40 +160,21 @@ public class CruiseControlTest {
         userDefinedBrokerCapacity.setInboundNetwork("50000KB/s");
         userDefinedBrokerCapacity.setOutboundNetwork("50000KB/s");
 
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withBrokerCapacity(userDefinedBrokerCapacity)
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withBrokerCapacity(userDefinedBrokerCapacity)
+                    .endCruiseControl()
+                .endSpec()
                 .build();
+        Map<String, Storage> storage = Map.of("brokers", new JbodStorageBuilder().withVolumes(new PersistentClaimStorageBuilder().withId(0).withSize("50Gi").build(), new PersistentClaimStorageBuilder().withId(1).withSize("60Gi").build()).build());
+        Map<String, ResourceRequirements> resources = Map.of("brokers", new ResourceRequirementsBuilder().withRequests(Map.of(Capacity.RESOURCE_TYPE, new Quantity("400m"))).withLimits(Map.of(Capacity.RESOURCE_TYPE, new Quantity("0.5"))).build());
+        CruiseControl cc = createCruiseControl(kafka, NODES, storage, resources);
 
-        Kafka resource = createKafka(cruiseControlSpec);
-
-        // Test generated disk capacity
-        JbodStorage jbodStorage = new JbodStorageBuilder()
-                .withVolumes(
-                        new PersistentClaimStorageBuilder().withDeleteClaim(true).withId(0).withSize("50Gi").build(),
-                        new PersistentClaimStorageBuilder().withDeleteClaim(true).withId(1).build()
-                ).build();
-
-        Map<String, Quantity> requests = Map.of(Capacity.RESOURCE_TYPE, new Quantity("400m"));
-        Map<String, Quantity> limits = Map.of(Capacity.RESOURCE_TYPE, new Quantity("0.5"));
-
-        resource = new KafkaBuilder(ResourceUtils.createKafka(NAMESPACE, CLUSTER, REPLICAS, IMAGE, HEALTH_DELAY, HEALTH_TIMEOUT))
-            .editSpec()
-                .editKafka()
-                    .withVersion(KafkaVersionTestUtils.DEFAULT_KAFKA_VERSION)
-                    .withConfig(kafkaConfig)
-                    .withStorage(jbodStorage)
-                    .withResources(new ResourceRequirementsBuilder().withRequests(requests).withLimits(limits).build())
-                .endKafka()
-                .withCruiseControl(cruiseControlSpec)
-            .endSpec()
-            .build();
-
-        CruiseControl cc = createCruiseControl(resource);
         ConfigMap configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
-
         JsonObject capacity = new JsonObject(configMap.getData().get(CruiseControl.CAPACITY_CONFIG_FILENAME));
         JsonArray brokerEntries = capacity.getJsonArray(Capacity.CAPACITIES_KEY);
+
         for (Object brokerEntry : brokerEntries) {
             JsonObject brokerCapacity = ((JsonObject) brokerEntry).getJsonObject(Capacity.CAPACITY_KEY);
             Object diskCapacity = brokerCapacity.getValue(Capacity.DISK_KEY);
@@ -290,8 +183,12 @@ public class CruiseControlTest {
             assertThat(isJBOD(diskCapacity), is(true));
             assertThat(cpuCapacity, is(expectedCpuCapacity));
         }
+    }
 
+    @ParallelTest
+    public void testBrokerCapacityOverrides() {
         // Test capacity overrides
+        String userDefinedCpuCapacity = "2575m";
         String userDefinedCpuCapacityOverride0 = "1.222";
         String inboundNetwork = "50000KB/s";
         String inboundNetworkOverride0 = "25000KB/s";
@@ -305,30 +202,33 @@ public class CruiseControlTest {
         List<Integer> overrideList0 = List.of(broker0, broker1, broker2, broker0);
         List<Integer> overrideList1 = List.of(broker1);
 
-        cruiseControlSpec = new CruiseControlSpecBuilder()
-            .withImage(ccImage)
-            .withNewBrokerCapacity()
-                .withCpu(userDefinedCpuCapacity)
-                .withInboundNetwork(inboundNetwork)
-                .addNewOverride()
-                    .withBrokers(overrideList0)
-                    .withCpu(userDefinedCpuCapacityOverride0)
-                    .withInboundNetwork(inboundNetworkOverride0)
-                .endOverride()
-                .addNewOverride()
-                    .withBrokers(overrideList1)
-                    .withInboundNetwork(inboundNetworkOverride1)
-                    .withOutboundNetwork(outboundNetworkOverride1)
-                .endOverride()
-            .endBrokerCapacity()
-            .build();
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewBrokerCapacity()
+                            .withCpu(userDefinedCpuCapacity)
+                            .withInboundNetwork(inboundNetwork)
+                            .addNewOverride()
+                                .withBrokers(overrideList0)
+                                .withCpu(userDefinedCpuCapacityOverride0)
+                                .withInboundNetwork(inboundNetworkOverride0)
+                            .endOverride()
+                            .addNewOverride()
+                                .withBrokers(overrideList1)
+                                .withInboundNetwork(inboundNetworkOverride1)
+                                .withOutboundNetwork(outboundNetworkOverride1)
+                            .endOverride()
+                        .endBrokerCapacity()
+                    .endCruiseControl()
+                .endSpec()
+                .build();
+        Map<String, Storage> storage = Map.of("brokers", new PersistentClaimStorageBuilder().withId(0).withSize("50Gi").build());
+        Map<String, ResourceRequirements> resources = Map.of("brokers", new ResourceRequirementsBuilder().withRequests(Map.of(Capacity.RESOURCE_TYPE, new Quantity("400m"))).withLimits(Map.of(Capacity.RESOURCE_TYPE, new Quantity("0.5"))).build());
+        CruiseControl cc = createCruiseControl(kafka, NODES, storage, resources);
 
-        resource = createKafka(cruiseControlSpec);
-        cc = createCruiseControl(resource);
-        configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
-
-        capacity = new JsonObject(configMap.getData().get(CruiseControl.CAPACITY_CONFIG_FILENAME));
-        brokerEntries = capacity.getJsonArray(Capacity.CAPACITIES_KEY);
+        ConfigMap configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
+        JsonObject capacity = new JsonObject(configMap.getData().get(CruiseControl.CAPACITY_CONFIG_FILENAME));
+        JsonArray brokerEntries = capacity.getJsonArray(Capacity.CAPACITIES_KEY);
 
         for (Object brokerEntry : brokerEntries) {
             JsonObject brokerCapacity = ((JsonObject) brokerEntry).getJsonObject(Capacity.CAPACITY_KEY);
@@ -349,34 +249,54 @@ public class CruiseControlTest {
         assertThat(brokerEntry1.getString(Capacity.OUTBOUND_NETWORK_KEY), is(BrokerCapacity.DEFAULT_OUTBOUND_NETWORK_CAPACITY_IN_KIB_PER_SECOND));
 
         JsonObject brokerEntry2 = brokerEntries.getJsonObject(broker2).getJsonObject(Capacity.CAPACITY_KEY);
-        assertThat(brokerEntry1.getJsonObject(Capacity.CPU_KEY), is(new CpuCapacity(userDefinedCpuCapacityOverride0).getJson()));
-        assertThat(brokerEntry1.getString(Capacity.INBOUND_NETWORK_KEY), is(Capacity.getThroughputInKiB(inboundNetworkOverride0)));
+        assertThat(brokerEntry2.getJsonObject(Capacity.CPU_KEY), is(new CpuCapacity(userDefinedCpuCapacityOverride0).getJson()));
+        assertThat(brokerEntry2.getString(Capacity.INBOUND_NETWORK_KEY), is(Capacity.getThroughputInKiB(inboundNetworkOverride0)));
+    }
 
-        // Test generated CPU capacity
-        userDefinedCpuCapacity = "500m";
+    @ParallelTest
+    public void testBrokerCapacityGeneratedCpu() {
+        String userDefinedCpuCapacity = "2575m";
+        String userDefinedCpuCapacityOverride0 = "1.222";
+        String inboundNetwork = "50000KB/s";
+        String inboundNetworkOverride0 = "25000KB/s";
+        String inboundNetworkOverride1 = "10000KiB/s";
+        String outboundNetworkOverride1 = "15000KB/s";
 
-        requests = Map.of(Capacity.RESOURCE_TYPE, new Quantity(userDefinedCpuCapacity));
-        limits = Map.of(Capacity.RESOURCE_TYPE, new Quantity("0.5"));
+        int broker0 = 0;
+        int broker1 = 1;
+        int broker2 = 2;
 
-        resource = new KafkaBuilder(ResourceUtils.createKafka(NAMESPACE, CLUSTER, REPLICAS, IMAGE, HEALTH_DELAY, HEALTH_TIMEOUT))
-            .editSpec()
-                .editKafka()
-                .withVersion(KafkaVersionTestUtils.DEFAULT_KAFKA_VERSION)
-                .withStorage(jbodStorage)
-                .withResources(new ResourceRequirementsBuilder().withRequests(requests).withLimits(limits).build())
-                .withConfig(kafkaConfig)
-            .endKafka()
-            .withCruiseControl(cruiseControlSpec)
-            .endSpec()
-            .build();
+        List<Integer> overrideList0 = List.of(broker0, broker1, broker2, broker0);
+        List<Integer> overrideList1 = List.of(broker1);
 
-        cc = createCruiseControl(resource);
-        configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
-        capacity = new JsonObject(configMap.getData().get(CruiseControl.CAPACITY_CONFIG_FILENAME));
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewBrokerCapacity()
+                            .withCpu(userDefinedCpuCapacity)
+                            .withInboundNetwork(inboundNetwork)
+                            .addNewOverride()
+                                .withBrokers(overrideList0)
+                                .withCpu(userDefinedCpuCapacityOverride0)
+                                .withInboundNetwork(inboundNetworkOverride0)
+                            .endOverride()
+                            .addNewOverride()
+                                .withBrokers(overrideList1)
+                                .withInboundNetwork(inboundNetworkOverride1)
+                                .withOutboundNetwork(outboundNetworkOverride1)
+                            .endOverride()
+                        .endBrokerCapacity()
+                    .endCruiseControl()
+                .endSpec()
+                .build();
+        Map<String, Storage> storage = Map.of("brokers", new JbodStorageBuilder().withVolumes(new PersistentClaimStorageBuilder().withId(0).withSize("50Gi").build(), new PersistentClaimStorageBuilder().withId(1).withSize("60Gi").build()).build());
+        Map<String, ResourceRequirements> resources = Map.of("brokers", new ResourceRequirementsBuilder().withRequests(Map.of(Capacity.RESOURCE_TYPE, new Quantity("500m"))).withLimits(Map.of(Capacity.RESOURCE_TYPE, new Quantity("0.5"))).build());
+        CruiseControl cc = createCruiseControl(kafka, NODES, storage, resources);
 
-        expectedCpuCapacity = new CpuCapacity(userDefinedCpuCapacityOverride0).getJson();
-
-        brokerEntries = capacity.getJsonArray(Capacity.CAPACITIES_KEY);
+        ConfigMap configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
+        JsonObject capacity = new JsonObject(configMap.getData().get(CruiseControl.CAPACITY_CONFIG_FILENAME));
+        JsonObject expectedCpuCapacity = new CpuCapacity(userDefinedCpuCapacityOverride0).getJson();
+        JsonArray brokerEntries = capacity.getJsonArray(Capacity.CAPACITIES_KEY);
         for (Object brokerEntry : brokerEntries) {
             JsonObject brokerCapacity = ((JsonObject) brokerEntry).getJsonObject(Capacity.CAPACITY_KEY);
             JsonObject cpuCapacity  = brokerCapacity.getJsonObject(Capacity.CPU_KEY);
@@ -387,12 +307,12 @@ public class CruiseControlTest {
     @ParallelTest
     public void testBrokerCapacitiesWithPools() {
         Set<NodeRef> nodes = Set.of(
-                new NodeRef("foo-pool1-0", 0, "pool1", false, true),
-                new NodeRef("foo-pool1-1", 1, "pool1", false, true),
-                new NodeRef("foo-pool1-2", 2, "pool1", false, true),
-                new NodeRef("foo-pool2-10", 10, "pool2", false, true),
-                new NodeRef("foo-pool2-11", 11, "pool2", false, true),
-                new NodeRef("foo-pool2-12", 12, "pool2", false, true)
+                new NodeRef("my-cluster-pool1-0", 0, "pool1", false, true),
+                new NodeRef("my-cluster-pool1-1", 1, "pool1", false, true),
+                new NodeRef("my-cluster-pool1-2", 2, "pool1", false, true),
+                new NodeRef("my-cluster-pool2-10", 10, "pool2", false, true),
+                new NodeRef("my-cluster-pool2-11", 11, "pool2", false, true),
+                new NodeRef("my-cluster-pool2-12", 12, "pool2", false, true)
         );
 
         Map<String, Storage> storage = new HashMap<>();
@@ -404,7 +324,7 @@ public class CruiseControlTest {
         resources.put("pool2", new ResourceRequirementsBuilder().withLimits(Map.of("cpu", new Quantity("5"), "memory", new Quantity("20Gi"))).build());
 
         // Test the capacity
-        CruiseControl cc = CruiseControl.fromCrd(Reconciliation.DUMMY_RECONCILIATION, kafka, VERSIONS, nodes, storage, resources, SHARED_ENV_PROVIDER);
+        CruiseControl cc = createCruiseControl(KAFKA, nodes, storage, resources);
         ConfigMap configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
         JsonObject capacity = new JsonObject(configMap.getData().get(CruiseControl.CAPACITY_CONFIG_FILENAME));
         JsonArray brokerEntries = capacity.getJsonArray(Capacity.CAPACITIES_KEY);
@@ -462,25 +382,46 @@ public class CruiseControlTest {
 
     @ParallelTest
     public void testFromConfigMap() {
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withImage("my-image:latest")
+                    .endCruiseControl()
+                .endSpec()
+                .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
+
         assertThat(cc.namespace, is(NAMESPACE));
-        assertThat(cc.cluster, is(CLUSTER));
-        assertThat(cc.getImage(), is(ccImage));
+        assertThat(cc.cluster, is(CLUSTER_NAME));
+        assertThat(cc.getImage(), is("my-image:latest"));
     }
 
     @ParallelTest
     public void testGenerateDeployment() {
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewTemplate()
+                            .withNewPod()
+                                .withTmpDirSizeLimit("100Mi")
+                            .endPod()
+                        .endTemplate()
+                    .endCruiseControl()
+                .endSpec()
+                .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
+
         Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
-
-        List<Container> containers = dep.getSpec().getTemplate().getSpec().getContainers();
-
-        assertThat(containers.size(), is(1));
-
-        assertThat(dep.getMetadata().getName(), is(CruiseControlResources.componentName(CLUSTER)));
+        assertThat(dep.getMetadata().getName(), is(CruiseControlResources.componentName(CLUSTER_NAME)));
         assertThat(dep.getMetadata().getNamespace(), is(NAMESPACE));
+        assertThat(dep.getSpec().getTemplate().getSpec().getSecurityContext(), is(nullValue()));
         TestUtils.checkOwnerReference(dep, kafka);
 
+        List<Container> containers = dep.getSpec().getTemplate().getSpec().getContainers();
+        assertThat(containers.size(), is(1));
+
         // checks on the main Cruise Control container
-        Container ccContainer = containers.stream().filter(container -> ccImage.equals(container.getImage())).findFirst().orElseThrow();
+        Container ccContainer = containers.get(0);
         assertThat(ccContainer.getImage(), is(cc.image));
         assertThat(ccContainer.getLivenessProbe().getInitialDelaySeconds(), is(15));
         assertThat(ccContainer.getLivenessProbe().getTimeoutSeconds(), is(5));
@@ -499,15 +440,15 @@ public class CruiseControlTest {
 
         Volume volume = volumes.stream().filter(vol -> CruiseControl.TLS_CC_CERTS_VOLUME_NAME.equals(vol.getName())).findFirst().orElseThrow();
         assertThat(volume, is(notNullValue()));
-        assertThat(volume.getSecret().getSecretName(), is(CruiseControlResources.secretName(CLUSTER)));
+        assertThat(volume.getSecret().getSecretName(), is(CruiseControlResources.secretName(CLUSTER_NAME)));
 
         volume = volumes.stream().filter(vol -> CruiseControl.TLS_CA_CERTS_VOLUME_NAME.equals(vol.getName())).findFirst().orElseThrow();
         assertThat(volume, is(notNullValue()));
-        assertThat(volume.getSecret().getSecretName(), is(AbstractModel.clusterCaCertSecretName(CLUSTER)));
+        assertThat(volume.getSecret().getSecretName(), is(AbstractModel.clusterCaCertSecretName(CLUSTER_NAME)));
 
         volume = volumes.stream().filter(vol -> CruiseControl.API_AUTH_CONFIG_VOLUME_NAME.equals(vol.getName())).findFirst().orElseThrow();
         assertThat(volume, is(notNullValue()));
-        assertThat(volume.getSecret().getSecretName(), is(CruiseControlResources.apiSecretName(CLUSTER)));
+        assertThat(volume.getSecret().getSecretName(), is(CruiseControlResources.apiSecretName(CLUSTER_NAME)));
 
         volume = volumes.stream().filter(vol -> VolumeUtils.STRIMZI_TMP_DIRECTORY_DEFAULT_VOLUME_NAME.equals(vol.getName())).findFirst().orElseThrow();
         assertThat(volume, is(notNullValue()));
@@ -516,7 +457,7 @@ public class CruiseControlTest {
 
         volume = volumes.stream().filter(vol -> CruiseControl.CONFIG_VOLUME_NAME.equals(vol.getName())).findFirst().orElseThrow();
         assertThat(volume, is(notNullValue()));
-        assertThat(volume.getConfigMap().getName(), is(CruiseControlResources.configMapName(CLUSTER)));
+        assertThat(volume.getConfigMap().getName(), is(CruiseControlResources.configMapName(CLUSTER_NAME)));
 
         // Test volume mounts
         List<VolumeMount> volumesMounts = dep.getSpec().getTemplate().getSpec().getContainers().get(0).getVolumeMounts();
@@ -545,51 +486,19 @@ public class CruiseControlTest {
 
     @ParallelTest
     public void testEnvVars() {
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
         assertThat(cc.getEnvVars(), is(getExpectedEnvVars()));
     }
 
     @ParallelTest
     public void testImagePullPolicy() {
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
+
         Deployment dep = cc.generateDeployment(Map.of(), true, ImagePullPolicy.ALWAYS, null);
-        List<Container> containers = dep.getSpec().getTemplate().getSpec().getContainers();
-        Container ccContainer = containers.stream().filter(container -> ccImage.equals(container.getImage())).findFirst().orElseThrow();
-        assertThat(ccContainer.getImagePullPolicy(), is(ImagePullPolicy.ALWAYS.toString()));
+        assertThat(dep.getSpec().getTemplate().getSpec().getContainers().get(0).getImagePullPolicy(), is(ImagePullPolicy.ALWAYS.toString()));
 
         dep = cc.generateDeployment(Map.of(), true, ImagePullPolicy.IFNOTPRESENT, null);
-        containers = dep.getSpec().getTemplate().getSpec().getContainers();
-        ccContainer = containers.stream().filter(container -> ccImage.equals(container.getImage())).findFirst().orElseThrow();
-        assertThat(ccContainer.getImagePullPolicy(), is(ImagePullPolicy.IFNOTPRESENT.toString()));
-    }
-
-    @ParallelTest
-    public void testContainerTemplateEnvVars() {
-        ContainerEnvVar envVar1 = new ContainerEnvVar();
-        String testEnvOneKey = "TEST_ENV_1";
-        String testEnvOneValue = "test.env.one";
-        envVar1.setName(testEnvOneKey);
-        envVar1.setValue(testEnvOneValue);
-
-        ContainerEnvVar envVar2 = new ContainerEnvVar();
-        String testEnvTwoKey = "TEST_ENV_2";
-        String testEnvTwoValue = "test.env.two";
-        envVar2.setName(testEnvTwoKey);
-        envVar2.setValue(testEnvTwoValue);
-
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withNewTemplate()
-                    .withNewCruiseControlContainer()
-                        .withEnv(envVar1, envVar2)
-                    .endCruiseControlContainer()
-                .endTemplate()
-                .build();
-
-        Kafka resource = createKafka(cruiseControlSpec);
-        CruiseControl cc = createCruiseControl(resource);
-        List<EnvVar> envVarList = cc.getEnvVars();
-
-        assertThat(envVarList, hasItems(new EnvVar(testEnvOneKey, testEnvOneValue, null)));
-        assertThat(envVarList, hasItems(new EnvVar(testEnvTwoKey, testEnvTwoValue, null)));
+        assertThat(dep.getSpec().getTemplate().getSpec().getContainers().get(0).getImagePullPolicy(), is(ImagePullPolicy.IFNOTPRESENT.toString()));
     }
 
     @ParallelTest
@@ -601,40 +510,46 @@ public class CruiseControlTest {
         envVar1.setValue(testEnvOneValue);
 
         ContainerEnvVar envVar2 = new ContainerEnvVar();
-        String testEnvTwoKey = "TEST_ENV_2";
+        String testEnvTwoKey = "STRIMZI_KAFKA_BOOTSTRAP_SERVERS";
         String testEnvTwoValue = "my-special-value";
         envVar2.setName(testEnvTwoKey);
         envVar2.setValue(testEnvTwoValue);
 
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withNewTemplate()
-                    .withNewCruiseControlContainer()
-                        .withEnv(envVar1, envVar2)
-                    .endCruiseControlContainer()
-                .endTemplate()
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewTemplate()
+                            .withNewCruiseControlContainer()
+                                .withEnv(envVar1, envVar2)
+                            .endCruiseControlContainer()
+                        .endTemplate()
+                    .endCruiseControl()
+                .endSpec()
                 .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
-        Kafka resource = createKafka(cruiseControlSpec);
-        CruiseControl cc = createCruiseControl(resource);
         List<EnvVar> envVarList = cc.getEnvVars();
-
         assertThat(envVarList, hasItems(new EnvVar(testEnvOneKey, testEnvOneValue, null)));
-        assertThat(envVarList, hasItems(new EnvVar(testEnvTwoKey, testEnvTwoValue, null)));
+        assertThat(envVarList, hasItems(new EnvVar(testEnvTwoKey, "my-cluster-kafka-bootstrap:9091", null)));
     }
 
     @ParallelTest
     public void testCruiseControlNotDeployed() {
-        Kafka kafka = createKafka(null);
-        assertThat(createCruiseControl(kafka), is(nullValue()));
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withCruiseControl(null)
+                .endSpec()
+                .build();
+        assertThat(createCruiseControl(kafka, NODES, STORAGE, Map.of()), is(nullValue()));
     }
 
     @ParallelTest
     public void testGenerateService() {
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
         Service svc = cc.generateService();
 
         assertThat(svc.getSpec().getType(), is("ClusterIP"));
-        assertThat(svc.getMetadata().getLabels(), is(expectedLabels(CruiseControlResources.serviceName(CLUSTER))));
+        assertThat(svc.getMetadata().getLabels(), is(expectedLabels(CruiseControlResources.serviceName(CLUSTER_NAME))));
         assertThat(svc.getSpec().getSelector(), is(expectedSelectorLabels()));
         assertThat(svc.getSpec().getPorts().size(), is(1));
         assertThat(svc.getSpec().getPorts().get(0).getName(), is(CruiseControl.REST_API_PORT_NAME));
@@ -643,22 +558,23 @@ public class CruiseControlTest {
         assertThat(svc.getSpec().getIpFamilyPolicy(), is(nullValue()));
         assertThat(svc.getSpec().getIpFamilies(), is(nullValue()));
 
-        TestUtils.checkOwnerReference(svc, kafka);
+        TestUtils.checkOwnerReference(svc, KAFKA);
     }
 
+    @SuppressWarnings("MethodLength")
     @ParallelTest
     public void testTemplate() {
         Map<String, String> depLabels = TestUtils.map("l1", "v1", "l2", "v2");
-        Map<String, String> depAnots = TestUtils.map("a1", "v1", "a2", "v2");
+        Map<String, String> depAnnotations = TestUtils.map("a1", "v1", "a2", "v2");
 
         Map<String, String> podLabels = TestUtils.map("l3", "v3", "l4", "v4");
-        Map<String, String> podAnots = TestUtils.map("a3", "v3", "a4", "v4");
+        Map<String, String> podAnnotations = TestUtils.map("a3", "v3", "a4", "v4");
 
         Map<String, String> svcLabels = TestUtils.map("l5", "v5", "l6", "v6");
-        Map<String, String> svcAnots = TestUtils.map("a5", "v5", "a6", "v6");
+        Map<String, String> svcAnnotations = TestUtils.map("a5", "v5", "a6", "v6");
 
         Map<String, String> saLabels = TestUtils.map("l7", "v7", "l8", "v8");
-        Map<String, String> saAnots = TestUtils.map("a7", "v7", "a8", "v8");
+        Map<String, String> saAnnotations = TestUtils.map("a7", "v7", "a8", "v8");
 
         Affinity affinity = new AffinityBuilder()
                 .withNewNodeAffinity()
@@ -705,60 +621,74 @@ public class CruiseControlTest {
                 .withSubPath("def")
                 .build());
 
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withNewTemplate()
-                    .withNewDeployment()
-                        .withNewMetadata()
-                            .withLabels(depLabels)
-                            .withAnnotations(depAnots)
-                        .endMetadata()
-                    .endDeployment()
-                    .withNewPod()
-                        .withNewMetadata()
-                            .withLabels(podLabels)
-                            .withAnnotations(podAnots)
-                        .endMetadata()
-                        .withPriorityClassName("top-priority")
-                        .withSchedulerName("my-scheduler")
-                        .withHostAliases(hostAlias1, hostAlias2)
-                        .withAffinity(affinity)
-                        .withTolerations(tolerations)
-                        .withVolumes(additionalVolumes)
-                    .endPod()
-                    .withNewCruiseControlContainer()
-                        .withVolumeMounts(additionalVolumeMounts)
-                    .endCruiseControlContainer()
-                    .withNewApiService()
-                        .withNewMetadata()
-                            .withLabels(svcLabels)
-                            .withAnnotations(svcAnots)
-                        .endMetadata()
-                        .withIpFamilyPolicy(IpFamilyPolicy.PREFER_DUAL_STACK)
-                        .withIpFamilies(IpFamily.IPV6, IpFamily.IPV4)
-                    .endApiService()
-                    .withNewServiceAccount()
-                        .withNewMetadata()
-                            .withLabels(saLabels)
-                            .withAnnotations(saAnots)
-                        .endMetadata()
-                    .endServiceAccount()
-                .endTemplate()
-                .build();
+        ContainerEnvVar envVar1 = new ContainerEnvVar();
+        String testEnvOneKey = "TEST_ENV_1";
+        String testEnvOneValue = "test.env.one";
+        envVar1.setName(testEnvOneKey);
+        envVar1.setValue(testEnvOneValue);
 
-        Kafka resource = createKafka(cruiseControlSpec);
-        CruiseControl cc = createCruiseControl(resource);
+        ContainerEnvVar envVar2 = new ContainerEnvVar();
+        String testEnvTwoKey = "TEST_ENV_2";
+        String testEnvTwoValue = "my-special-value";
+        envVar2.setName(testEnvTwoKey);
+        envVar2.setValue(testEnvTwoValue);
+
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewTemplate()
+                            .withNewDeployment()
+                                .withNewMetadata()
+                                    .withLabels(depLabels)
+                                    .withAnnotations(depAnnotations)
+                                .endMetadata()
+                            .endDeployment()
+                            .withNewPod()
+                                .withNewMetadata()
+                                    .withLabels(podLabels)
+                                    .withAnnotations(podAnnotations)
+                                .endMetadata()
+                                .withPriorityClassName("top-priority")
+                                .withSchedulerName("my-scheduler")
+                                .withHostAliases(hostAlias1, hostAlias2)
+                                .withAffinity(affinity)
+                                .withTolerations(tolerations)
+                                .withVolumes(additionalVolumes)
+                            .endPod()
+                            .withNewCruiseControlContainer()
+                                .withVolumeMounts(additionalVolumeMounts)
+                                .withEnv(envVar1, envVar2)
+                            .endCruiseControlContainer()
+                            .withNewApiService()
+                                .withNewMetadata()
+                                    .withLabels(svcLabels)
+                                    .withAnnotations(svcAnnotations)
+                                .endMetadata()
+                                .withIpFamilyPolicy(IpFamilyPolicy.PREFER_DUAL_STACK)
+                                .withIpFamilies(IpFamily.IPV6, IpFamily.IPV4)
+                            .endApiService()
+                            .withNewServiceAccount()
+                                .withNewMetadata()
+                                    .withLabels(saLabels)
+                                    .withAnnotations(saAnnotations)
+                                .endMetadata()
+                            .endServiceAccount()
+                        .endTemplate()
+                    .endCruiseControl()
+                .endSpec()
+                .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
         // Check Deployment
         Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
         depLabels.putAll(expectedLabels());
         assertThat(dep.getMetadata().getLabels(), is(depLabels));
-        assertThat(dep.getMetadata().getAnnotations(), is(depAnots));
+        assertThat(dep.getMetadata().getAnnotations(), is(depAnnotations));
 
         // Check Pods
         podLabels.putAll(expectedLabels());
         assertThat(dep.getSpec().getTemplate().getMetadata().getLabels(), is(podLabels));
-        assertThat(dep.getSpec().getTemplate().getMetadata().getAnnotations(), is(podAnots));
+        assertThat(dep.getSpec().getTemplate().getMetadata().getAnnotations(), is(podAnnotations));
         assertThat(dep.getSpec().getTemplate().getSpec().getPriorityClassName(), is("top-priority"));
         assertThat(dep.getSpec().getTemplate().getSpec().getSchedulerName(), is("my-scheduler"));
         assertThat(dep.getSpec().getTemplate().getSpec().getAffinity(), is(affinity));
@@ -766,19 +696,24 @@ public class CruiseControlTest {
         assertThat(dep.getSpec().getTemplate().getSpec().getHostAliases(), containsInAnyOrder(hostAlias1, hostAlias2));
         assertThat(dep.getSpec().getTemplate().getSpec().getVolumes().stream().filter(volume -> "secret-volume-name".equals(volume.getName())).iterator().next().getSecret(), is(secret));
         assertThat(dep.getSpec().getTemplate().getSpec().getContainers().get(0).getVolumeMounts().stream().filter(volumeMount -> "secret-volume-name".equals(volumeMount.getName())).iterator().next(), is(additionalVolumeMounts.get(0)));
-        
+
+        // Check Env Vars
+        List<EnvVar> envVarList = cc.getEnvVars();
+        assertThat(envVarList, hasItems(new EnvVar(testEnvOneKey, testEnvOneValue, null)));
+        assertThat(envVarList, hasItems(new EnvVar(testEnvTwoKey, testEnvTwoValue, null)));
+
         // Check Service
         svcLabels.putAll(expectedLabels());
         Service svc = cc.generateService();
         assertThat(svc.getMetadata().getLabels(), is(svcLabels));
-        assertThat(svc.getMetadata().getAnnotations(), is(svcAnots));
+        assertThat(svc.getMetadata().getAnnotations(), is(svcAnnotations));
         assertThat(svc.getSpec().getIpFamilyPolicy(), is("PreferDualStack"));
         assertThat(svc.getSpec().getIpFamilies(), contains("IPv6", "IPv4"));
 
         // Check Service Account
         ServiceAccount sa = cc.generateServiceAccount();
         assertThat(sa.getMetadata().getLabels().entrySet().containsAll(saLabels.entrySet()), is(true));
-        assertThat(sa.getMetadata().getAnnotations().entrySet().containsAll(saAnots.entrySet()), is(true));
+        assertThat(sa.getMetadata().getAnnotations().entrySet().containsAll(saAnnotations.entrySet()), is(true));
     }
 
     @ParallelTest
@@ -791,110 +726,91 @@ public class CruiseControlTest {
         limits.put("cpu", new Quantity("500m"));
         limits.put("memory", new Quantity("1024Mi"));
 
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withResources(new ResourceRequirementsBuilder().withLimits(limits).withRequests(requests).build())
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withResources(new ResourceRequirementsBuilder().withLimits(limits).withRequests(requests).build())
+                    .endCruiseControl()
+                .endSpec()
                 .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
-        Kafka resource = createKafka(cruiseControlSpec);
-
-        CruiseControl cc = createCruiseControl(resource);
         Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
-        List<Container> containers = dep.getSpec().getTemplate().getSpec().getContainers();
-        Container ccContainer = containers.stream().filter(container -> ccImage.equals(container.getImage())).findFirst().orElseThrow();
-
+        Container ccContainer = dep.getSpec().getTemplate().getSpec().getContainers().get(0);
         assertThat(ccContainer.getResources().getLimits(), is(limits));
         assertThat(ccContainer.getResources().getRequests(), is(requests));
     }
 
     @ParallelTest
     public void testCpuCapacityGeneration() {
-        Set<NodeRef> nodes = Set.of(
-                new NodeRef("foo-pool1-0", 0, "pool1", false, true),
-                new NodeRef("foo-pool1-1", 1, "pool1", false, true),
-                new NodeRef("foo-pool1-2", 2, "pool1", false, true)
-        );
+        String brokerCpuCapacity = "6.0";
+        String brokerCpuCapacityOverride = "2.0";
+        String resourceLimitCpu = "3.0";
+        String resourceRequestCpu = "4.0";
 
-        Map<String, Storage> storage = new HashMap<>();
-        storage.put("pool1", new JbodStorageBuilder().withVolumes(new PersistentClaimStorageBuilder().withId(0).withSize("100Gi").build()).build());
+        Map<String, Storage> storage = Map.of("brokers", new JbodStorageBuilder().withVolumes(new PersistentClaimStorageBuilder().withId(0).withSize("100Gi").build()).build());
 
         /* In this test case, when override is set for a broker, it takes precedence over the general broker capacity setting for that
            specific broker, but the general broker capacity takes precedence over the Kafka resource request */
-        ResourceRequirements resourceRequirements = new ResourceRequirementsBuilder()
-                .addToLimits("cpu", new Quantity(RESOURCE_LIMIT_CPU))
-                .addToRequests("cpu", new Quantity(RESOURCE_REQUESTS_CPU))
-                .build();
+        Map<String, ResourceRequirements> resources = Map.of("brokers", new ResourceRequirementsBuilder().addToLimits("cpu", new Quantity(resourceLimitCpu)).addToRequests("cpu", new Quantity(resourceRequestCpu)).build());
 
         io.strimzi.api.kafka.model.kafka.cruisecontrol.BrokerCapacity brokerCapacityOne = new BrokerCapacityBuilder()
-                .withCpu(BROKER_CAPACITY_CPU)
+                .withCpu(brokerCpuCapacity)
                 .withOverrides()
                     .addNewOverride()
                         .addToBrokers(0)
-                        .withCpu(BROKER_CAPACITY_OVERRIDE_CPU)
+                        .withCpu(brokerCpuCapacityOverride)
                     .endOverride()
                 .build();
 
-        verifyBrokerCapacity(nodes, storage, resourceRequirements, brokerCapacityOne, BROKER_CAPACITY_OVERRIDE_CPU, BROKER_CAPACITY_CPU, BROKER_CAPACITY_CPU);
+        verifyBrokerCapacity(storage, resources, brokerCapacityOne, brokerCpuCapacityOverride, brokerCpuCapacity, brokerCpuCapacity);
 
         // In this test case, when override is set for a broker, it takes precedence over the Kafka resource request
         io.strimzi.api.kafka.model.kafka.cruisecontrol.BrokerCapacity brokerCapacityTwo = new BrokerCapacityBuilder()
                 .withOverrides()
                     .addNewOverride()
                         .addToBrokers(0)
-                        .withCpu(BROKER_CAPACITY_OVERRIDE_CPU)
+                        .withCpu(brokerCpuCapacityOverride)
                     .endOverride()
                 .build();
 
-        verifyBrokerCapacity(nodes, storage, resourceRequirements, brokerCapacityTwo, BROKER_CAPACITY_OVERRIDE_CPU, RESOURCE_REQUESTS_CPU, RESOURCE_REQUESTS_CPU);
+        verifyBrokerCapacity(storage, resources, brokerCapacityTwo, brokerCpuCapacityOverride, resourceRequestCpu, resourceRequestCpu);
 
         /* In this test case, when neither the override nor the CPU resource request are configured but the CPU
            resource limit for CPU is set for the Kafka brokers; therefore, resource limit will be used as the CPU capacity */
-        ResourceRequirements resourceRequirements3 = new ResourceRequirementsBuilder()
-                .addToLimits("cpu", new Quantity(RESOURCE_LIMIT_CPU))
-                .build();
+        resources = Map.of("brokers", new ResourceRequirementsBuilder().addToLimits("cpu", new Quantity(resourceLimitCpu)).build());
 
-        io.strimzi.api.kafka.model.kafka.cruisecontrol.BrokerCapacity brokerCapacityThree = new BrokerCapacityBuilder()
-                .build();
+        io.strimzi.api.kafka.model.kafka.cruisecontrol.BrokerCapacity brokerCapacityThree = new BrokerCapacityBuilder().build();
 
-        verifyBrokerCapacity(nodes, storage, resourceRequirements3, brokerCapacityThree, RESOURCE_LIMIT_CPU, RESOURCE_LIMIT_CPU, RESOURCE_LIMIT_CPU);
+        verifyBrokerCapacity(storage, resources, brokerCapacityThree, resourceLimitCpu, resourceLimitCpu, resourceLimitCpu);
 
         /* In this test case, when neither the override nor the Kafka resource requests or limits for CPU are configured,
            the CPU capacity will be set to DEFAULT_CPU_CORE_CAPACITY */
-        ResourceRequirements resourceRequirements2 = new ResourceRequirementsBuilder()
-                .build();
+        resources = Map.of("brokers", new ResourceRequirementsBuilder().build());
 
-        verifyBrokerCapacity(nodes, storage, resourceRequirements2, brokerCapacityThree, BrokerCapacity.DEFAULT_CPU_CORE_CAPACITY, BrokerCapacity.DEFAULT_CPU_CORE_CAPACITY, BrokerCapacity.DEFAULT_CPU_CORE_CAPACITY);
+        verifyBrokerCapacity(storage, resources, brokerCapacityThree, BrokerCapacity.DEFAULT_CPU_CORE_CAPACITY, BrokerCapacity.DEFAULT_CPU_CORE_CAPACITY, BrokerCapacity.DEFAULT_CPU_CORE_CAPACITY);
     }
 
-    private void verifyBrokerCapacity(Set<NodeRef> nodes,
-                                     Map<String, Storage> storage,
-                                     ResourceRequirements resourceRequirements,
-                                     io.strimzi.api.kafka.model.kafka.cruisecontrol.BrokerCapacity brokerCapacity,
-                                     String brokerOneCpuValue,
-                                     String brokerTwoCpuValue,
-                                     String brokerThreeCpuValue) {
-
-        HashMap<String, ResourceRequirements> resources = new HashMap<>();
-        resources.put("pool1", resourceRequirements);
-
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withBrokerCapacity(brokerCapacity)
-                .build();
-
-        Kafka kafka = new KafkaBuilder()
-                .withNewSpec()
-                    .withNewKafka()
-                        .withResources(resourceRequirements)
-                        .withConfig(kafkaConfig)
-                    .endKafka()
-                    .withCruiseControl(cruiseControlSpec)
+    private void verifyBrokerCapacity(Map<String, Storage> storage,
+                                      Map<String, ResourceRequirements> resources,
+                                      io.strimzi.api.kafka.model.kafka.cruisecontrol.BrokerCapacity brokerCapacity,
+                                      String brokerOneCpuValue,
+                                      String brokerTwoCpuValue,
+                                      String brokerThreeCpuValue) {
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withBrokerCapacity(brokerCapacity)
+                    .endCruiseControl()
                 .endSpec()
                 .build();
 
-        CruiseControl cc = CruiseControl.fromCrd(Reconciliation.DUMMY_RECONCILIATION, kafka, VERSIONS, nodes, storage, resources, SHARED_ENV_PROVIDER);
+        CruiseControl cc = createCruiseControl(kafka, NODES, storage, resources);
+
         ConfigMap configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
         JsonObject capacity = new JsonObject(configMap.getData().get(CruiseControl.CAPACITY_CONFIG_FILENAME));
         JsonArray brokerEntries = capacity.getJsonArray(Capacity.CAPACITIES_KEY);
+
         assertThat(brokerEntries.getJsonObject(0).getJsonObject(Capacity.CAPACITY_KEY).getJsonObject(Capacity.CPU_KEY).getString("num.cores"), is(Matchers.equalTo(brokerOneCpuValue)));
         assertThat(brokerEntries.getJsonObject(1).getJsonObject(Capacity.CAPACITY_KEY).getJsonObject(Capacity.CPU_KEY).getString("num.cores"), is(Matchers.equalTo(brokerTwoCpuValue)));
         assertThat(brokerEntries.getJsonObject(2).getJsonObject(Capacity.CAPACITY_KEY).getJsonObject(Capacity.CPU_KEY).getString("num.cores"), is(Matchers.equalTo(brokerThreeCpuValue)));
@@ -918,72 +834,64 @@ public class CruiseControlTest {
         String e2Value = apiSslEnabled.toString();
         EnvVar e2 = new EnvVar(e2Key, e2Value, null);
 
-        Map<String, Object> config = new HashMap<>();
-        config.put(CruiseControlConfigurationParameters.WEBSERVER_SECURITY_ENABLE.getValue(), apiAuthEnabled);
-        config.put(CruiseControlConfigurationParameters.WEBSERVER_SSL_ENABLE.getValue(), apiSslEnabled);
-
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withConfig(config)
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withConfig(Map.of(CruiseControlConfigurationParameters.WEBSERVER_SECURITY_ENABLE.getValue(), apiAuthEnabled,
+                                CruiseControlConfigurationParameters.WEBSERVER_SSL_ENABLE.getValue(), apiSslEnabled))
+                    .endCruiseControl()
+                .endSpec()
                 .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
-        Kafka resource = createKafka(cruiseControlSpec);
-
-        CruiseControl cc = createCruiseControl(resource);
         Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
-        List<Container> containers = dep.getSpec().getTemplate().getSpec().getContainers();
-
-        // checks on the main Cruise Control container
-        Container ccContainer = containers.stream().filter(container -> ccImage.equals(container.getImage())).findFirst().orElseThrow();
-        List<EnvVar> envVarList = ccContainer.getEnv();
-
+        List<EnvVar> envVarList = dep.getSpec().getTemplate().getSpec().getContainers().get(0).getEnv();
         assertThat(envVarList.contains(e1),  is(true));
         assertThat(envVarList.contains(e2),  is(true));
     }
 
     @ParallelTest
     public void testProbeConfiguration()   {
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withNewLivenessProbe()
-                        .withInitialDelaySeconds(HEALTH_DELAY)
-                        .withTimeoutSeconds(HEALTH_TIMEOUT)
-                .endLivenessProbe()
-                .withNewReadinessProbe()
-                       .withInitialDelaySeconds(HEALTH_DELAY)
-                       .withTimeoutSeconds(HEALTH_TIMEOUT)
-                .endReadinessProbe()
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewLivenessProbe()
+                            .withInitialDelaySeconds(123)
+                            .withTimeoutSeconds(456)
+                        .endLivenessProbe()
+                        .withNewReadinessProbe()
+                           .withInitialDelaySeconds(789)
+                           .withTimeoutSeconds(987)
+                        .endReadinessProbe()
+                    .endCruiseControl()
+                .endSpec()
                 .build();
-
-        Kafka resource = createKafka(cruiseControlSpec);
-
-        CruiseControl cc = createCruiseControl(resource);
-        Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
-        List<Container> containers = dep.getSpec().getTemplate().getSpec().getContainers();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
         // checks on the main Cruise Control container
-        Container ccContainer = containers.stream().filter(container -> ccImage.equals(container.getImage())).findFirst().orElseThrow();
+        Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
+        Container ccContainer = dep.getSpec().getTemplate().getSpec().getContainers().get(0);
         assertThat(ccContainer.getImage(), is(cc.image));
-        assertThat(ccContainer.getLivenessProbe().getInitialDelaySeconds(), is(HEALTH_DELAY));
-        assertThat(ccContainer.getLivenessProbe().getTimeoutSeconds(), is(HEALTH_TIMEOUT));
-        assertThat(ccContainer.getReadinessProbe().getInitialDelaySeconds(), is(HEALTH_DELAY));
-        assertThat(ccContainer.getReadinessProbe().getTimeoutSeconds(), is(HEALTH_TIMEOUT));
+        assertThat(ccContainer.getLivenessProbe().getInitialDelaySeconds(), is(123));
+        assertThat(ccContainer.getLivenessProbe().getTimeoutSeconds(), is(456));
+        assertThat(ccContainer.getReadinessProbe().getInitialDelaySeconds(), is(789));
+        assertThat(ccContainer.getReadinessProbe().getTimeoutSeconds(), is(987));
     }
 
     @ParallelTest
     public void testSecurityContext() {
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withNewTemplate()
-                    .withNewPod()
-                        .withSecurityContext(new PodSecurityContextBuilder().withFsGroup(123L).withRunAsGroup(456L).withRunAsUser(789L).build())
-                    .endPod()
-                .endTemplate()
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewTemplate()
+                            .withNewPod()
+                                .withSecurityContext(new PodSecurityContextBuilder().withFsGroup(123L).withRunAsGroup(456L).withRunAsUser(789L).build())
+                            .endPod()
+                        .endTemplate()
+                    .endCruiseControl()
+                .endSpec()
                 .build();
-
-        Kafka resource = createKafka(cruiseControlSpec);
-
-        CruiseControl cc = createCruiseControl(resource);
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
         Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
         assertThat(dep.getSpec().getTemplate().getSpec().getSecurityContext(), is(notNullValue()));
@@ -994,7 +902,7 @@ public class CruiseControlTest {
 
     @ParallelTest
     public void testRestrictedSecurityContext() {
-        CruiseControl cc = createCruiseControl(createKafka(cruiseControlSpec));
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
         cc.securityProvider = new RestrictedPodSecurityProvider();
         cc.securityProvider.configure(new PlatformFeaturesAvailability(false, KubernetesVersion.MINIMAL_SUPPORTED_VERSION));
 
@@ -1008,19 +916,20 @@ public class CruiseControlTest {
 
     @ParallelTest
     public void testJvmOptions() {
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withNewJvmOptions()
-                .withXms("128m")
-                .withXmx("256m")
-                .withXx(Map.of("InitiatingHeapOccupancyPercent", "36"))
-                .withJavaSystemProperties(new SystemPropertyBuilder().withName("myProperty").withValue("myValue").build(),
-                        new SystemPropertyBuilder().withName("myProperty2").withValue("myValue2").build())
-                .endJvmOptions()
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewJvmOptions()
+                            .withXms("128m")
+                            .withXmx("256m")
+                            .withXx(Map.of("InitiatingHeapOccupancyPercent", "36"))
+                            .withJavaSystemProperties(new SystemPropertyBuilder().withName("myProperty").withValue("myValue").build(),
+                                    new SystemPropertyBuilder().withName("myProperty2").withValue("myValue2").build())
+                        .endJvmOptions()
+                    .endCruiseControl()
+                .endSpec()
                 .build();
-
-        Kafka resource = createKafka(cruiseControlSpec);
-
-        CruiseControl cc = createCruiseControl(resource);
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
         EnvVar systemProps = cc.getEnvVars().stream().filter(var -> AbstractModel.ENV_VAR_STRIMZI_JAVA_SYSTEM_PROPERTIES.equals(var.getName())).findFirst().orElse(null);
         assertThat(systemProps, is(notNullValue()));
@@ -1038,12 +947,6 @@ public class CruiseControlTest {
     }
 
     @ParallelTest
-    public void testDefaultSecurityContext() {
-        Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
-        assertThat(dep.getSpec().getTemplate().getSpec().getSecurityContext(), is(nullValue()));
-    }
-
-    @ParallelTest
     public void testCruiseControlContainerSecurityContext() {
         SecurityContext securityContext = new SecurityContextBuilder()
                 .withPrivileged(false)
@@ -1055,21 +958,20 @@ public class CruiseControlTest {
                 .endCapabilities()
                 .build();
 
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withNewTemplate()
-                    .withNewCruiseControlContainer()
-                        .withSecurityContext(securityContext)
-                    .endCruiseControlContainer()
-                .endTemplate()
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withNewTemplate()
+                            .withNewCruiseControlContainer()
+                                .withSecurityContext(securityContext)
+                            .endCruiseControlContainer()
+                        .endTemplate()
+                    .endCruiseControl()
+                .endSpec()
                 .build();
-
-        Kafka resource = createKafka(cruiseControlSpec);
-
-        CruiseControl cc = createCruiseControl(resource);
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
         Deployment dep = cc.generateDeployment(Map.of(), true, null, null);
-
         assertThat(dep.getSpec().getTemplate().getSpec().getContainers(),
                 hasItem(allOf(
                         hasProperty("name", equalTo(CruiseControl.CRUISE_CONTROL_CONTAINER_NAME)),
@@ -1086,12 +988,12 @@ public class CruiseControlTest {
                 .withNewNamespaceSelector().endNamespaceSelector()
                 .build();
 
-        NetworkPolicy np = cc.generateNetworkPolicy("operator-namespace", null, false);
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
 
+        NetworkPolicy np = cc.generateNetworkPolicy("operator-namespace", null, false);
         assertThat(np.getSpec().getIngress().stream().filter(ing -> ing.getPorts().get(0).getPort().equals(new IntOrString(CruiseControl.REST_API_PORT))).findFirst().orElse(null), is(notNullValue()));
 
         List<NetworkPolicyPeer> rules = np.getSpec().getIngress().stream().filter(ing -> ing.getPorts().get(0).getPort().equals(new IntOrString(CruiseControl.REST_API_PORT))).map(NetworkPolicyIngressRule::getFrom).findFirst().orElse(null);
-
         assertThat(rules.size(), is(1));
         assertThat(rules.contains(clusterOperatorPeer), is(true));
     }
@@ -1105,16 +1007,16 @@ public class CruiseControlTest {
                 .build();
         NetworkPolicyPeer entityOperatorPeer = new NetworkPolicyPeerBuilder()
             .withNewPodSelector()
-                .withMatchLabels(Collections.singletonMap(Labels.STRIMZI_NAME_LABEL, format("%s-entity-operator", CLUSTER)))
+                .withMatchLabels(Collections.singletonMap(Labels.STRIMZI_NAME_LABEL, format("%s-entity-operator", CLUSTER_NAME)))
             .endPodSelector()
             .build();
 
-        NetworkPolicy np = cc.generateNetworkPolicy(NAMESPACE, null, true);
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
 
+        NetworkPolicy np = cc.generateNetworkPolicy(NAMESPACE, null, true);
         assertThat(np.getSpec().getIngress().stream().filter(ing -> ing.getPorts().get(0).getPort().equals(new IntOrString(CruiseControl.REST_API_PORT))).findFirst().orElse(null), is(notNullValue()));
 
         List<NetworkPolicyPeer> rules = np.getSpec().getIngress().stream().filter(ing -> ing.getPorts().get(0).getPort().equals(new IntOrString(CruiseControl.REST_API_PORT))).map(NetworkPolicyIngressRule::getFrom).findFirst().orElse(null);
-
         assertThat(rules.size(), is(2));
         assertThat(rules.contains(clusterOperatorPeer), is(true));
         assertThat(rules.contains(entityOperatorPeer), is(true));
@@ -1132,19 +1034,19 @@ public class CruiseControlTest {
                 .build();
         NetworkPolicyPeer entityOperatorPeer = new NetworkPolicyPeerBuilder()
             .withNewPodSelector()
-                .withMatchLabels(Collections.singletonMap(Labels.STRIMZI_NAME_LABEL, format("%s-entity-operator", CLUSTER)))
+                .withMatchLabels(Collections.singletonMap(Labels.STRIMZI_NAME_LABEL, format("%s-entity-operator", CLUSTER_NAME)))
             .endPodSelector()
             .withNewNamespaceSelector()
                 .withMatchLabels(Collections.singletonMap("nsLabelKey", "nsLabelValue"))
             .endNamespaceSelector()
             .build();
 
-        NetworkPolicy np = cc.generateNetworkPolicy(null, Labels.fromMap(Collections.singletonMap("nsLabelKey", "nsLabelValue")), true);
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
 
+        NetworkPolicy np = cc.generateNetworkPolicy(null, Labels.fromMap(Collections.singletonMap("nsLabelKey", "nsLabelValue")), true);
         assertThat(np.getSpec().getIngress().stream().filter(ing -> ing.getPorts().get(0).getPort().equals(new IntOrString(CruiseControl.REST_API_PORT))).findFirst().orElse(null), is(notNullValue()));
 
         List<NetworkPolicyPeer> rules = np.getSpec().getIngress().stream().filter(ing -> ing.getPorts().get(0).getPort().equals(new IntOrString(CruiseControl.REST_API_PORT))).map(NetworkPolicyIngressRule::getFrom).findFirst().orElseThrow();
-
         assertThat(rules.size(), is(2));
         assertThat(rules.contains(clusterOperatorPeer), is(true));
         assertThat(rules.contains(entityOperatorPeer), is(true));
@@ -1152,43 +1054,36 @@ public class CruiseControlTest {
 
     @ParallelTest
     public void testGoalsCheck() {
-
         String customGoals = "com.linkedin.kafka.cruisecontrol.analyzer.goals.RackAwareGoal," +
                 "com.linkedin.kafka.cruisecontrol.analyzer.goals.ReplicaCapacityGoal";
 
-        Map<String, Object> customGoalConfig = new HashMap<>();
-        customGoalConfig.put(DEFAULT_GOALS_CONFIG_KEY.getValue(), customGoals);
-
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withConfig(customGoalConfig)
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withConfig(Map.of(DEFAULT_GOALS_CONFIG_KEY.getValue(), customGoals))
+                    .endCruiseControl()
+                .endSpec()
                 .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
-        Kafka resourceWithCustomGoals = createKafka(cruiseControlSpec);
-
-        CruiseControl cruiseControlWithCustomGoals = createCruiseControl(resourceWithCustomGoals);
-
-        String anomalyDetectionGoals =  cruiseControlWithCustomGoals
-                .configuration.asOrderedProperties().asMap()
-                .get(ANOMALY_DETECTION_CONFIG_KEY.getValue());
-
+        String anomalyDetectionGoals =  cc.configuration.asOrderedProperties().asMap().get(ANOMALY_DETECTION_CONFIG_KEY.getValue());
         assertThat(anomalyDetectionGoals, is(customGoals));
     }
 
     @ParallelTest
     public void testMetricsParsingFromConfigMap() {
-        MetricsConfig metrics = new JmxPrometheusExporterMetricsBuilder()
-                .withNewValueFrom()
-                    .withConfigMapKeyRef(new ConfigMapKeySelectorBuilder().withName("my-metrics-configuration").withKey("config.yaml").build())
-                .endValueFrom()
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withMetricsConfig(new JmxPrometheusExporterMetricsBuilder()
+                                .withNewValueFrom()
+                                    .withConfigMapKeyRef(new ConfigMapKeySelectorBuilder().withName("my-metrics-configuration").withKey("config.yaml").build())
+                                .endValueFrom()
+                                .build())
+                    .endCruiseControl()
+                .endSpec()
                 .build();
-
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withMetricsConfig(metrics)
-                .build();
-
-        Kafka kafkaAssembly = createKafka(cruiseControlSpec);
-        CruiseControl cc = createCruiseControl(kafkaAssembly);
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
 
         assertThat(cc.metrics().isEnabled(), is(true));
         assertThat(cc.metrics().getConfigMapName(), is("my-metrics-configuration"));
@@ -1197,10 +1092,7 @@ public class CruiseControlTest {
 
     @ParallelTest
     public void testMetricsParsingNoMetrics() {
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder().build();
-        Kafka kafkaAssembly = createKafka(cruiseControlSpec);
-
-        CruiseControl cc = createCruiseControl(kafkaAssembly);
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
 
         assertThat(cc.metrics().isEnabled(), is(false));
         assertThat(cc.metrics().getConfigMapName(), is(nullValue()));
@@ -1209,44 +1101,63 @@ public class CruiseControlTest {
 
     @ParallelTest
     public void testDefaultTopicNames() {
-        Map<String, String> topicConfigs = new HashMap<>();
-        topicConfigs.put(CruiseControlConfigurationParameters.PARTITION_METRIC_TOPIC_NAME.getValue(), CruiseControlConfigurationParameters.DEFAULT_PARTITION_METRIC_TOPIC_NAME);
-        topicConfigs.put(CruiseControlConfigurationParameters.BROKER_METRIC_TOPIC_NAME.getValue(), CruiseControlConfigurationParameters.DEFAULT_BROKER_METRIC_TOPIC_NAME);
-        topicConfigs.put(CruiseControlConfigurationParameters.METRIC_REPORTER_TOPIC_NAME.getValue(), CruiseControlConfigurationParameters.DEFAULT_METRIC_REPORTER_TOPIC_NAME);
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
 
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .build();
+        Map<String, String> expectedTopicConfigs = new HashMap<>();
+        expectedTopicConfigs.put(CruiseControlConfigurationParameters.PARTITION_METRIC_TOPIC_NAME.getValue(), CruiseControlConfigurationParameters.DEFAULT_PARTITION_METRIC_TOPIC_NAME);
+        expectedTopicConfigs.put(CruiseControlConfigurationParameters.BROKER_METRIC_TOPIC_NAME.getValue(), CruiseControlConfigurationParameters.DEFAULT_BROKER_METRIC_TOPIC_NAME);
+        expectedTopicConfigs.put(CruiseControlConfigurationParameters.METRIC_REPORTER_TOPIC_NAME.getValue(), CruiseControlConfigurationParameters.DEFAULT_METRIC_REPORTER_TOPIC_NAME);
 
-        Kafka resource = createKafka(cruiseControlSpec);
-        CruiseControl cc = createCruiseControl(resource);
-        topicConfigs.forEach((configParam, name) -> assertThat(cc.configuration.getConfiguration(), containsString(String.format("%s=%s", configParam, name))));
+        expectedTopicConfigs.forEach((configParam, name) -> assertThat(cc.configuration.getConfiguration(), containsString(String.format("%s=%s", configParam, name))));
     }
 
     @ParallelTest
     public void testCustomTopicNames() {
-        Map<String, String> topicConfigs = new HashMap<>();
-        topicConfigs.put(CruiseControlConfigurationParameters.PARTITION_METRIC_TOPIC_NAME.getValue(), "partition-topic");
-        topicConfigs.put(CruiseControlConfigurationParameters.BROKER_METRIC_TOPIC_NAME.getValue(), "broker-topic");
-        topicConfigs.put(CruiseControlConfigurationParameters.METRIC_REPORTER_TOPIC_NAME.getValue(), "metric-reporter-topic");
         Map<String, Object> customConfig = new HashMap<>();
-        customConfig.putAll(topicConfigs);
+        customConfig.put(CruiseControlConfigurationParameters.PARTITION_METRIC_TOPIC_NAME.getValue(), "partition-topic");
+        customConfig.put(CruiseControlConfigurationParameters.BROKER_METRIC_TOPIC_NAME.getValue(), "broker-topic");
+        customConfig.put(CruiseControlConfigurationParameters.METRIC_REPORTER_TOPIC_NAME.getValue(), "metric-reporter-topic");
 
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withConfig(customConfig)
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withConfig(customConfig)
+                    .endCruiseControl()
+                .endSpec()
                 .build();
-
-        Kafka resource = createKafka(cruiseControlSpec);
-        CruiseControl cc = createCruiseControl(resource);
-        topicConfigs.forEach((configParam, name) -> assertThat(cc.configuration.getConfiguration(), containsString(String.format("%s=%s", configParam, name))));
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
+        customConfig.forEach((configParam, name) -> assertThat(cc.configuration.getConfiguration(), containsString(String.format("%s=%s", configParam, name))));
     }
 
-    private Properties getCcProperties(Kafka resource) {
-        CruiseControl cc = createCruiseControl(resource);
+    @ParallelTest
+    public void testDefaultSampleStoreTopicReplicationFactorConfig() {
+        // Test that the replication factor of Cruise Control's sample store topic is set to Kafka cluster's `default.replication.factor`
+        // when not explicitly set in Cruise Control config
+        CruiseControl cc = createCruiseControl(KAFKA, NODES, STORAGE, Map.of());
+
         ConfigMap configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
-        return parsePropertiesString(configMap.getData().get(CruiseControl.SERVER_CONFIG_FILENAME));
+        assertThat(parsePropertiesString(configMap.getData().get(CruiseControl.SERVER_CONFIG_FILENAME)).getProperty(CruiseControlConfigurationParameters.SAMPLE_STORE_TOPIC_REPLICATION_FACTOR.getValue()), is("3"));
     }
+
+    @ParallelTest
+    public void testCustomSampleStoreTopicReplicationFactorConfig() {
+        // Test that the replication factor of Cruise Control's sample store topic is set to value set in Cruise Control config
+        Kafka kafka = new KafkaBuilder(KAFKA)
+                .editSpec()
+                    .withNewCruiseControl()
+                        .withConfig(Map.of(CruiseControlConfigurationParameters.SAMPLE_STORE_TOPIC_REPLICATION_FACTOR.getValue(), 7))
+                    .endCruiseControl()
+                .endSpec()
+                .build();
+        CruiseControl cc = createCruiseControl(kafka, NODES, STORAGE, Map.of());
+
+        ConfigMap configMap = cc.generateConfigMap(new MetricsAndLogging(null, null));
+        assertThat(parsePropertiesString(configMap.getData().get(CruiseControl.SERVER_CONFIG_FILENAME)).getProperty(CruiseControlConfigurationParameters.SAMPLE_STORE_TOPIC_REPLICATION_FACTOR.getValue()), is("7"));
+    }
+
+    ////////////////////
+    // Utility methods
+    ////////////////////
 
     private static Properties parsePropertiesString(String kafkaPropertiesString) {
         Properties properties = new Properties();
@@ -1258,26 +1169,54 @@ public class CruiseControlTest {
         return properties;
     }
 
-    @ParallelTest
-    public void testSampleStoreTopicReplicationFactorConfig() {
-        // Test that the replication factor of Cruise Control's sample store topic is set to Kafka cluster's `default.replication.factor`
-        // when not explicitly set in Cruise Control config
-        Properties properties = getCcProperties(kafka);
-        assertThat(properties.getProperty(CruiseControlConfigurationParameters.SAMPLE_STORE_TOPIC_REPLICATION_FACTOR.getValue()), is(REPLICATION_FACTOR));
-
-        // Test that the replication factor of Cruise Control's sample store topic is set to value set in Cruise Control config
-        String replicationFactor = "1";
-        CruiseControlSpec cruiseControlSpec = new CruiseControlSpecBuilder()
-                .withImage(ccImage)
-                .withConfig(Map.of(CruiseControlConfigurationParameters.SAMPLE_STORE_TOPIC_REPLICATION_FACTOR.getValue(), replicationFactor))
-                .build();
-
-        properties = getCcProperties(createKafka(cruiseControlSpec));
-        assertThat(properties.getProperty(CruiseControlConfigurationParameters.SAMPLE_STORE_TOPIC_REPLICATION_FACTOR.getValue()), is(replicationFactor));
+    private CruiseControl createCruiseControl(Kafka kafka, Set<NodeRef> nodes, Map<String, Storage> storageMap, Map<String, ResourceRequirements> resourceRequirementsMap) {
+        return CruiseControl
+                .fromCrd(
+                        Reconciliation.DUMMY_RECONCILIATION,
+                        kafka,
+                        VERSIONS,
+                        nodes,
+                        storageMap,
+                        resourceRequirementsMap,
+                        SHARED_ENV_PROVIDER
+                );
     }
 
-    @AfterAll
-    public static void cleanUp() {
-        ResourceUtils.cleanUpTemporaryTLSFiles();
+    private Map<String, String> expectedLabels(String name) {
+        return TestUtils.map(Labels.STRIMZI_CLUSTER_LABEL, CLUSTER_NAME,
+                "my-user-label", "cromulent",
+                Labels.STRIMZI_KIND_LABEL, Kafka.RESOURCE_KIND,
+                Labels.STRIMZI_NAME_LABEL, name,
+                Labels.STRIMZI_COMPONENT_TYPE_LABEL, CruiseControl.COMPONENT_TYPE,
+                Labels.KUBERNETES_NAME_LABEL, CruiseControl.COMPONENT_TYPE,
+                Labels.KUBERNETES_INSTANCE_LABEL, CLUSTER_NAME,
+                Labels.KUBERNETES_PART_OF_LABEL, Labels.APPLICATION_NAME + "-" + CLUSTER_NAME,
+                Labels.KUBERNETES_MANAGED_BY_LABEL, AbstractModel.STRIMZI_CLUSTER_OPERATOR_NAME);
+    }
+
+    private Map<String, String> expectedSelectorLabels() {
+        return Labels.fromMap(expectedLabels()).strimziSelectorLabels().toMap();
+    }
+
+    private Map<String, String> expectedLabels() {
+        return expectedLabels(CruiseControlResources.componentName(CLUSTER_NAME));
+    }
+
+    private List<EnvVar> getExpectedEnvVars() {
+        List<EnvVar> expected = new ArrayList<>();
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_CRUISE_CONTROL_METRICS_ENABLED).withValue(Boolean.toString(CruiseControl.DEFAULT_CRUISE_CONTROL_METRICS_ENABLED)).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_STRIMZI_KAFKA_BOOTSTRAP_SERVERS).withValue(KafkaResources.bootstrapServiceName(CLUSTER_NAME) + ":" + KafkaCluster.REPLICATION_PORT).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_STRIMZI_KAFKA_GC_LOG_ENABLED).withValue(Boolean.toString(JvmOptions.DEFAULT_GC_LOGGING_ENABLED)).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_SSL_ENABLED).withValue(Boolean.toString(CruiseControlConfigurationParameters.DEFAULT_WEBSERVER_SSL_ENABLED)).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_AUTH_ENABLED).withValue(Boolean.toString(CruiseControlConfigurationParameters.DEFAULT_WEBSERVER_SECURITY_ENABLED)).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_HEALTHCHECK_USERNAME).withValue(CruiseControlApiProperties.HEALTHCHECK_USERNAME).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_PORT).withValue(Integer.toString(CruiseControl.REST_API_PORT)).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_API_HEALTHCHECK_PATH).withValue(API_HEALTHCHECK_PATH).build());
+        expected.add(new EnvVarBuilder().withName(CruiseControl.ENV_VAR_KAFKA_HEAP_OPTS).withValue("-Xms" + JvmOptionUtils.DEFAULT_JVM_XMS).build());
+        return expected;
+    }
+
+    private static boolean isJBOD(Object diskCapacity) {
+        return diskCapacity instanceof JsonObject;
     }
 }
